# DS_2223_hw_2

./: .gitignore  README.md  notes.txt
task_3/source/: CMakeLists.txt  bst.c  bst.h  bstD.h  bstTraverseOrder.h  test.c
task_4/: CMakeLists.txt  bst.c  bstD.h  test.c
